kubernetes/ingress/mongo-express.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  namespace: beeyond
spec:
  ingressClassName: traefik
  rules:
    - host: mongo-express.beyoond.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
